# vox-gothica

./: .gitignore  CONTRIBUTING.md  README.md  contributors.json
vox-gothica/: Dockerfile  Makefile  README.md  gothica_entry.py  install.ps1  install.sh  pyproject.toml
vox-gothica/applicata/: README.md
vox-gothica/applicata/auspex_impietatis/: litania.toml  principium.vg
vox-gothica/applicata/census_mortis/: litania.toml  principium.vg
vox-gothica/applicata/cogitator_arithmetica/: litania.toml  principium.vg  principium_fenestra.vg
vox-gothica/demo/: litania.toml
vox-gothica/demo/fons/: tributum.vg
vox-gothica/demo/probationes/: litaniae_proba.vg  tributum_proba.vg
vox-gothica/exempla/: auspex_lectio.vg  census_servitorum.vg  fabrica_interretialis.vg  litania_numerorum.vg  salutatio.vg
vox-gothica/gothica/: __init__.py  arbor.py  censura.py  cli.py  codex.py  cultus.py  diagnostic_records.py  diagnostica.py  emit.py  fabrica.py  heresiae.py  interpres.py  lexicon.py  lustro.py  modularis.py  parser.py  purga.py  sigillum_app.py  speculum.py  typi.py  valores.py
vox-gothica/gothica/litaniae/: __init__.py  adfero.py  claustrum.py  expello.py  initium.py  librarium.py  manifest_edit.py  manifestum.py  offero.py  renovo.py
vox-gothica/probationes/censura/: binop_pravus.vg  condicio_pravus.vg  import_pravus.vg  modulus_pravus.vg  ordo_cov_assign.vg  ordo_inner_pravus.vg  ordo_pravus.vg  reditus_pravus.vg  ritus_pravus.vg  schema_pravus.vg  tabula_key_pravus.vg  typus_ignotus.vg  typus_pravus.vg
vox-gothica/scripts/: run_proba.py  run_typi_proba.py
(+67 files in other folders)
